# OpenLogos

./: INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  openlogos.in
CacheMgr/: CacheManager.cpp  CacheManager.h  Makefile.am  Makefile.in  main.cpp
TermMiner/: BinaryTree.cpp  BinaryTree.h  DegreeQuery.cpp  DegreeQuery.h  DictionaryFoundTerm.cpp  DictionaryFoundTerm.h  DictionaryUnfoundTerm.cpp  DictionaryUnfoundTerm.h  GermanSourceCompoundWord.cpp  GermanSourceCompoundWord.h  Makefile.am  Makefile.in  MeaningIDQuery.cpp  MeaningIDQuery.h  MorphologyTableQuery.cpp  MorphologyTableQuery.h  TargetUsageIDQuery.cpp  TargetUsageIDQuery.h  Term.cpp  Term.h  TermElement.cpp  TermElement.h  TermMiner.cpp  TermMiner.h  TermNode.cpp  TermNode.h  TermSearchSentenceUnit.cpp  TermSearchSentenceUnit.h  TermSearchStatistic.cpp  TermSearchStatistic.h  Tran1GermanCompoundTerm.cpp  Tran1GermanCompoundTerm.h  Tran1NounPhraseTerm.cpp  Tran1NounPhraseTerm.h  Tran1NounPhraseTermEnglish.cpp  Tran1NounPhraseTermEnglish.h  Tran1NounPhraseTermGerman.cpp  Tran1NounPhraseTermGerman.h  Tran1Output.cpp  Tran1Output.h  (+10 more)
configdatafileinterface/: Makefile.am  Makefile.in  configdataerror.cpp  configdataerror.h  configdatafile.cpp  configdatafile.h  configdatainterface.cpp  configdatainterface.h  configdatainterfacemain.cpp  configdatainterfacemain.h  enginedata.cpp  enginedata.h  filenames.ini  mswindowsinifile.cpp  mswindowsinifile.h  resdata.cpp  resdata.h  sourcedata.cpp  sourcedata.h  trandata.cpp  trandata.h  writeprivateprofilestring.cpp
engine_api/APITest/: APIParameter.cpp  APIParameter.h  APIParameterList.cpp  APIParameterList.h  APITest.cpp  Lgsout.cpp  Lgsout.h  Makefile.am  Makefile.in
engine_api/translationserver/: Makefile.am  Makefile.in  XlationEngine.cpp  XlationEngine.h  comparameters.h  resource.h  translationserver.cpp  xlationconsts.cpp  xlationconsts.h
engine_api/xlationinterface/: Makefile.am  Makefile.in  XlationSessionJNI.cpp  property.h  propertylist.cpp  propertylist.h  xlationinterfacedefs.cpp  xlationinterfacedefs.h  xlationsession.cpp  xlationsession.h  xlationsessionmanager.cpp  xlationsessionmanager.h
lgs_db_io/: Makefile.am  Makefile.in  dbinstances.cpp  dbinstances.h  dllmain.cpp  interactivetranslstatus.cpp  interactivetranslstatus.h  jobcntrlarginterface.cpp  jobcntrlarginterface.h  jobcontrolarguments.cpp  jobcontrolarguments.h  lgsdbcommonobjects.cpp  lgsdbcommonobjects.h  memory_mapper.cpp  pattablequery.cpp  pattablequery.h  querytodictionary.cpp  querytodictionary.h  serverproperties.cpp  serverproperties.h  stemgenrulequery.cpp  stemgenrulequery.h
lgs_stemgen/: Makefile.am  Makefile.in  prefixrule.cpp  prefixrule.h  stemgenerator.cpp  stemgenerator.h  stemgeneratorrules.h  stemreplacerule.cpp  stemreplacerule.h
logos_java/GermanHalfNoun/: GermanHalfNoun.h  Makefile.am  Makefile.in
logos_java/PatStem/: CompoundStatement.cpp  CompoundStatement.h  ConnectionManager.cpp  ConnectionManager.h  DBConnection.cpp  DBConnection.h  GenericStatement.cpp  GenericStatement.h  Makefile.am  Makefile.in  ObjectStore.cpp  ObjectStore.h  PatFinder.cpp  PatFinder.h  PatGeneratorImpl.cpp  PatGeneratorImpl.h  PatgenQuery.cpp  PatgenQuery.h  StemGeneratorImpl.cpp  StemGeneratorImpl.h  StemgenMain.cpp  StemgenQuery.cpp  StemgenQuery.h  fake_main.cpp  statement.cpp  statement.h
logos_libs/GrammarRules/: Checker.h  CheckerFactory.h  ExtRec.cpp  ExtRec.h  LgsGrammarRules.h  LgsLanguage.cpp  LgsLanguage.h  LgsPass.cpp  LgsPass.h  LgsRule.cpp  LgsRule.h  LgsRuleSet.cpp  LgsRuleSet.h  LgsSortKeyTemplate.cpp  LgsSortKeyTemplate.h  LgsSpElement.cpp  LgsSpElement.h  LgsTable.cpp  LgsTable.h  LgsTableSet.cpp  LgsTableSet.h  LgsTypeStatement.cpp  LgsTypeStatement.h  LgsVtrStatement.cpp  LgsVtrStatement.h  Makefile.am  Makefile.in  Parser.cpp  Parser.h  fake_mfc.cpp  fake_mfc.h  lx-rul.l  resource.h  sx-rul.y  tagsets.txt
logos_libs/SubjectMatterCodes/: Makefile.am  Makefile.in  SMCTreeQuery.cpp  SMCTreeQuery.h  SubjectMatterCode.cpp  SubjectMatterCode.h  SubjectMatterCodeNode.cpp  SubjectMatterCodeNode.h  SubjectMatterCodeTree.cpp  SubjectMatterCodeTree.h
logos_libs/dbcache/: CacheCompanyData.cpp  CacheCompanyData.h  CacheCompanyQuery.cpp  CacheCompanyQuery.h  CacheConstantCodeData.cpp  CacheConstantCodeData.h  CacheConstantCodeQuery.cpp  CacheConstantCodeQuery.h  CacheConstantPointerData.cpp  CacheConstantPointerData.h  CacheConstantPointerQuery.cpp  CacheConstantPointerQuery.h  CacheData.cpp  CacheData.h  CacheDerivedFormData.cpp  CacheDerivedFormData.h  CacheDerivedFormQuery.cpp  CacheDerivedFormQuery.h  CacheEndingLengthData.cpp  CacheEndingLengthData.h  CacheEndingLengthQuery.cpp  CacheEndingLengthQuery.h  CacheGphraseData.cpp  CacheGphraseData.h  CacheGphraseQuery.cpp  CacheGphraseQuery.h  CacheGssuData.cpp  CacheGssuData.h  CacheGssuQuery.cpp  CacheGssuQuery.h  CacheGwordQuery.cpp  CacheGwordQuery.h  CacheHashTab.cpp  CacheHashTab.h  CacheInflectionData.cpp  CacheInflectionData.h  CacheInflectionQuery.cpp  CacheInflectionQuery.h  CacheIrregularStemData.cpp  CacheIrregularStemData.h  (+90 more)
logos_libs/dbms2restran/: Makefile.am  Makefile.in  constantcodebuilder.cpp  constantcodebuilder.h  constantpointerretriever.cpp  constantpointerretriever.h  genderretriever.cpp  genderretriever.h  gettargetcodes.cpp  gettargetcodes.h  gettargetwordphrase.cpp  gettargetwordphrase.h  targetretriever.cpp  targetretriever.h  transfercode.cpp  transfercode.h  transfercodebuilder.cpp  transfercodebuilder.h  transferretriever.cpp  transferretriever.h
logos_libs/elision/: Makefile.am  Makefile.in  document.h  engine.h  factory.h  initcapconsequent.h  lowercaseconsequent.h  primitive.h  replaceconsequent.cpp  replaceconsequent.h  searchantecedent.cpp  searchantecedent.h  (+2 more)
transl/: AlignOutput.cpp  AlignOutput.h  AsciiAlignTool.cpp  AsciiAlignTool.h  DiagCombine.cpp  DiagCombine.h  Filter.cpp  Filter.h  Makefile.am  Makefile.in  PostTransl.cpp  PreTransl.cpp  Utils.cpp  Utils.h  interface.h  lgstraninterface.h  transl.cpp  translthrman.cpp  translthrman.h
(+1092 files in other folders)
