# -*- makefile -*-

noinst_LTLIBRARIES = libTermMiner.la

libTermMiner_la_SOURCES = BinaryTree.cpp \
	DegreeQuery.cpp \
	DictionaryFoundTerm.cpp \
	DictionaryUnfoundTerm.cpp \
	GermanSourceCompoundWord.cpp \
	MeaningIDQuery.cpp \
	MorphologyTableQuery.cpp \
	TargetUsageIDQuery.cpp \
	Term.cpp \
	TermElement.cpp \
	TermMiner.cpp \
	TermNode.cpp \
	TermSearchSentenceUnit.cpp \
	TermSearchStatistic.cpp \
	Tran1GermanCompoundTerm.cpp \
	Tran1NounPhraseTerm.cpp \
	Tran1NounPhraseTermEnglish.cpp \
	Tran1NounPhraseTermGerman.cpp \
	Tran1Output.cpp \
	Tran1Unit.cpp \
	TransferGenderQuery.cpp \
	TransferStatusQuery.cpp \
	WordIDQuery.cpp \
	WordQuery.cpp \
	BinaryTree.h \
	DegreeQuery.h \
	DictionaryFoundTerm.h \
	DictionaryUnfoundTerm.h \
	GermanSourceCompoundWord.h \
	MeaningIDQuery.h \
	MorphologyTableQuery.h \
	TargetUsageIDQuery.h \
	Term.h \
	TermElement.h \
	TermMiner.h \
	TermNode.h \
	TermSearchSentenceUnit.h \
	TermSearchStatistic.h \
	Tran1GermanCompoundTerm.h \
	Tran1NounPhraseTerm.h \
	Tran1NounPhraseTermEnglish.h \
	Tran1NounPhraseTermGerman.h \
	Tran1Output.h \
	Tran1Unit.h \
	TransferGenderQuery.h \
	TransferStatusQuery.h \
	WordIDQuery.h \
	WordQuery.h

