# -*- makefile -*-

noinst_LTLIBRARIES = liblgs_stemgen.la

liblgs_stemgen_la_SOURCES = prefixrule.cpp prefixrule.h stemgenerator.cpp \
	stemgenerator.h stemreplacerule.cpp stemreplacerule.h \
	stemgeneratorrules.h

# Only for dll ?
#libstemgen_a_LDADD = $(top_builddir)/lgs_base/liblgs_base.a" \
#	              $(top_builddir)/logos_libs/newdebug/libnewdebug.a