noinst_HEADERS = GermanHalfNoun.h

lib_LTLIBRARIES = libhalfnounjava.la

libhalfnounjava_la_LIBADD= \
	$(top_builddir)/logos_libs/halfnoundll/libhalfnoun.la\
	$(top_builddir)/configdatafileinterface/libconfigdatafileinterface.la\
	$(top_builddir)/logos_libs/regex/libregex.la\
	$(top_builddir)/logos_libs/newdebug/libnewdebug.la

libhalfnounjava_la_SOURCES=