# -*- makefile -*-

#AM_CPPFLAGS = @GLOBAL_CPPFLAGS@
#AM_CXXFLAGS = @GLOBAL_CXXFLAGS@
#AM_CFLAGS   = @GLOBAL_CFLAGS@

EXTRA_DIST = lx-rul.l sx-rul.y tagsets.txt

lib_LTLIBRARIES = libgrammarrules.la

libgrammarrules_la_SOURCES = \
	ExtRec.cpp \
	LgsLanguage.cpp \
	LgsPass.cpp \
	LgsRule.cpp \
	LgsRuleSet.cpp \
	LgsSortKeyTemplate.cpp \
	LgsSpElement.cpp \
	LgsTable.cpp \
	LgsTableSet.cpp \
	LgsTypeStatement.cpp \
	LgsVtrStatement.cpp \
        Parser.cpp \
	fake_mfc.cpp \
	Checker.h \
	CheckerFactory.h \
	LgsGrammarRules.h \
	resource.h \
	ExtRec.h \
	LgsLanguage.h \
	LgsPass.h \
	LgsRule.h \
	LgsRuleSet.h \
	LgsSortKeyTemplate.h \
	LgsSpElement.h \
	LgsTable.h \
	LgsTableSet.h \
	LgsTypeStatement.h \
	LgsVtrStatement.h \
        Parser.h \
	fake_mfc.h
#	SortKeyTemplateDlg.cpp SortKeyTemplateDlg.h dllmain.cpp