# -*- makefile -*-

noinst_LTLIBRARIES = libSubjectMatterCodes.la

libSubjectMatterCodes_la_SOURCES = SMCTreeQuery.cpp \
  SubjectMatterCode.cpp \
  SubjectMatterCodeNode.cpp \
  SubjectMatterCodeTree.cpp \
  SMCTreeQuery.h \
  SubjectMatterCode.h \
  SubjectMatterCodeNode.h \
  SubjectMatterCodeTree.h
