EXTRA_DIST = \
	CacheCompanyData.cpp \
	CacheCompanyQuery.cpp \
	CacheConstantCodeData.cpp \
	CacheConstantCodeQuery.cpp \
	CacheConstantPointerData.cpp \
	CacheConstantPointerQuery.cpp \
	CacheData.cpp \
	CacheDerivedFormData.cpp \
	CacheDerivedFormQuery.cpp \
	CacheEndingLengthData.cpp \
	CacheEndingLengthQuery.cpp \
	CacheGphraseData.cpp \
	CacheGphraseQuery.cpp \
	CacheGssuData.cpp \
	CacheGssuQuery.cpp \
	CacheGwordQuery.cpp \
	CacheHashTab.cpp \
	CacheInflectionData.cpp \
	CacheInflectionQuery.cpp \
	CacheIrregularStemData.cpp \
	CacheIrregularStemQuery.cpp \
	CacheKey.cpp \
	CachePatData.cpp \
	CachePatData_pn_deg.cpp \
	CachePatData_pn_gc_nc.cpp \
	CachePatData_pn_gc_nc_cc.cpp \
	CachePatData_pn_gc_nc_dc_cc_deg.cpp \
	CachePatData_pn_gc_nc_deg.cpp \
	CachePatData_pn_gc_nc_pc_cc.cpp \
	CachePatData_pn_gc_nc_pc_tc.cpp \
	CachePatData_pn_nc.cpp \
	CachePatData_pn_nc_deg.cpp \
	CachePatData_pn_nc_pc_tc.cpp \
	CachePatQuery.cpp \
	CachePatQuery_pn_deg.cpp \
	CachePatQuery_pn_gc_nc.cpp \
	CachePatQuery_pn_gc_nc_cc.cpp \
	CachePatQuery_pn_gc_nc_dc_cc_deg.cpp \
	CachePatQuery_pn_gc_nc_deg.cpp \
	CachePatQuery_pn_gc_nc_pc_cc.cpp \
	CachePatQuery_pn_gc_nc_pc_tc.cpp \
	CachePatQuery_pn_nc.cpp \
	CachePatQuery_pn_nc_deg.cpp \
	CachePatQuery_pn_nc_pc_tc.cpp \
	CachePatternRulesData.cpp \
	CachePatternRulesQuery.cpp \
	CacheSemtabRuleData.cpp \
	CacheSemtabRuleQuery.cpp \
	CacheSMCData.cpp \
	CacheSMCQuery.cpp \
	CacheStemgenRuleData.cpp \
	CacheStemgenRuleQuery.cpp \
	CacheTargetData.cpp \
	CacheTargetQuery.cpp \
	CacheTargetWordData.cpp \
	CacheTargetWordQuery.cpp \
	CacheTransferCodeData.cpp \
	CacheTransferCodeQuery.cpp \
	CacheTransferCountData.cpp \
	CacheTransferCountQuery.cpp \
	CacheTransferData.cpp \
	CacheTransferQuery.cpp \
	CacheWordInPhraseData.cpp \
	CacheWordInPhraseQuery.cpp \
	CacheCompanyData.h \
	CacheCompanyQuery.h \
	CacheConstantCodeData.h \
	CacheConstantCodeQuery.h \
	CacheConstantPointerData.h \
	CacheConstantPointerQuery.h \
	CacheData.h \
	CacheDerivedFormData.h \
	CacheDerivedFormQuery.h \
	CacheEndingLengthData.h \
	CacheEndingLengthQuery.h \
	CacheGphraseData.h \
	CacheGphraseQuery.h \
	CacheGssuData.h \
	CacheGssuQuery.h \
	CacheGwordQuery.h \
	CacheHashTab.h \
	CacheInflectionData.h \
	CacheInflectionQuery.h \
	CacheIrregularStemData.h \
	CacheIrregularStemQuery.h \
	CacheKey.h \
	CachePatData.h \
	CachePatData_pn_deg.h \
	CachePatData_pn_gc_nc.h \
	CachePatData_pn_gc_nc_cc.h \
	CachePatData_pn_gc_nc_dc_cc_deg.h \
	CachePatData_pn_gc_nc_deg.h \
	CachePatData_pn_gc_nc_pc_cc.h \
	CachePatData_pn_gc_nc_pc_tc.h \
	CachePatData_pn_nc.h \
	CachePatData_pn_nc_deg.h \
	CachePatData_pn_nc_pc_tc.h \
	CachePatQuery.h \
	CachePatQuery_pn_deg.h \
	CachePatQuery_pn_gc_nc.h \
	CachePatQuery_pn_gc_nc_cc.h \
	CachePatQuery_pn_gc_nc_dc_cc_deg.h \
	CachePatQuery_pn_gc_nc_deg.h \
	CachePatQuery_pn_gc_nc_pc_cc.h \
	CachePatQuery_pn_gc_nc_pc_tc.h \
	CachePatQuery_pn_nc.h \
	CachePatQuery_pn_nc_deg.h \
	CachePatQuery_pn_nc_pc_tc.h \
	CachePatternRulesData.h \
	CachePatternRulesQuery.h \
	CacheSemtabRuleData.h \
	CacheSemtabRuleQuery.h \
	CacheSMCData.h \
	CacheSMCQuery.h \
	CacheStemgenRuleData.h \
	CacheStemgenRuleQuery.h \
	CacheTargetData.h \
	CacheTargetQuery.h \
	CacheTargetWordData.h \
	CacheTargetWordQuery.h \
	CacheTransferCodeData.h \
	CacheTransferCodeQuery.h \
	CacheTransferCountData.h \
	CacheTransferCountQuery.h \
	CacheTransferData.h \
	CacheTransferQuery.h \
	CacheWordInPhraseData.h \
	CacheWordInPhraseQuery.h

