
EXTRA_DIST = \
	constantcodebuilder.cpp \
	constantpointerretriever.cpp \
	genderretriever.cpp \
	gettargetcodes.cpp \
	gettargetwordphrase.cpp \
	targetretriever.cpp \
	transfercode.cpp \
	transfercodebuilder.cpp \
	transferretriever.cpp \
	constantcodebuilder.h \
	constantpointerretriever.h \
	genderretriever.h \
	gettargetcodes.h \
	gettargetwordphrase.h \
	targetretriever.h \
	transfercode.h \
	transfercodebuilder.h \
	transferretriever.h