# -*- makefile -*-

noinst_LTLIBRARIES = libentity.la

libentity_la_SOURCES = dcompany.cpp \
  dconstantpointer.cpp \
  dderivedform.cpp \
  dmorphology.cpp \
  dobject.cpp \
  domaininteger.cpp \
  dtransfer.cpp \
  dwordphrase.cpp \
  dcompany.h \
  dconstantpointer.h \
  dderivedform.h \
  dmorphology.h \
  dobject.h \
  domaininteger.h \
  dtransfer.h \
  dwordphrase.h
