# -*- makefile -*-

noinst_LTLIBRARIES = libgerdem.la

EXTRA_DIST = \
	constantpointerquery.cpp \
	gphrasequery.cpp \
	gssuquery.cpp \
	gwordcapquery.cpp \
	gwordquery.cpp \
	irregularstemquery.cpp \
	phraseidquery.cpp \
	targetquery.cpp \
	targetunitconcretebuilder.cpp \
	transfercountquery.cpp \
	transferquery.cpp \
	wordinphrasequery.cpp \
	wordphrasequery.cpp \
	constantpointerquery.h \
	gphrasequery.h \
	gssuquery.h \
	gwordcapquery.h \
	gwordquery.h \
	irregularstemquery.h \
	phraseidquery.h \
	targetquery.h \
	targetunitconcretebuilder.h \
	transfercountquery.h \
	transferquery.h \
	wordinphrasequery.h \
	wordphrasequery.h	


libgerdem_la_SOURCES = 	 cardinalprototypemap.cpp \
	 dictionaryentrybuilder.cpp \
	 entryprototypemap.cpp \
	 gabstractmatcher.cpp \
	 gcompanybuilder.cpp \
	 gentrycache.cpp \
	 gerdemlanguagebuilder.cpp \
	 gfactory.cpp \
	 gmatchcache.cpp \
	 gmatcher.cpp \
	 grootedword.cpp \
	 gsubjectmatterbuilder.cpp \
	 gwordcache.cpp \
	 hndepwrdlookup.cpp \
	 pattablequeryman.cpp \
	 patternprototypebuilder.cpp \
	 patternprototypemap.cpp \
	 phrasematchsequencer.cpp \
	 punctuationprototypebuilder.cpp \
	 scontable.cpp \
	 stembuilder.cpp \
	 targetwordquery.cpp \
	 wordgrouplookup.cpp \
	 wordgroupmanager.cpp \
	 cardinalprototypemap.h \
	 dictionaryentrybuilder.h \
	 entryprototypemap.h \
	 gabstractmatcher.h \
	 gcompanybuilder.h \
	 gentrycache.h \
	 gerdemlanguagebuilder.h \
	 gfactory.h \
	 gmatchcache.h \
	 gmatcher.h \
	 grootedword.h \
	 gsubjectmatterbuilder.h \
	 gwordcache.h \
	 hndepwrdlookup.h \
	 pattablequeryman.h \
	 patternprototypebuilder.h \
	 patternprototypemap.h \
	 phrasematchsequencer.h \
	 punctuationprototypebuilder.h \
	 scontable.h \
	 stembuilder.h \
	 targetwordquery.h \
	 wordgrouplookup.h \
	 wordgroupmanager.h 