EXTRA_DIST = \
        germanconnectorinfo.cpp \
        germandictionary1.cpp \
        germandictionary2.cpp \
        germandictionaryentry.cpp \
        germanexclusioninfo.cpp \
        germanflag.cpp \
        germanpatsteminfo.cpp \
        germansearch.cpp \
        germansuffixinfo.cpp \
	germansworkinfo.cpp \
        germantoken.cpp \
        germanutil.cpp \
        logfile.cpp \
        timer.cpp \
	germanbufferlength.h \
	germanconnectorresolution.h \
        germanconnectorinfo.h \
	germandictionary.h \
        germandictionaryentry.h \
        germanexclusioninfo.h \
        germanflag.h \
	germanheadwordinfo.h \
	germanpatstem.h \
        germanpatsteminfo.h \
        germansearch.h \
        germansuffixinfo.h \
	germansworkinfo.h \
        germantoken.h \
        germanutil.h \
	germanwordclass.h \
        logfile.h \
        timer.h \
	1_readme.txt \
	connector.txt \
	halfnoun.txt \
	PlaceName.txt \
	ProperName.txt \
	swork.txt

