# -*- makefile -*-

AM_CPPFLAGS = -I$(top_srcdir)/logos_include_res_pt

noinst_LTLIBRARIES = liblgs_parsetran1.la

liblgs_parsetran1_la_SOURCES = copy144.c \
        projextd.c \
        rsworkbl.c \
        se0537.c \
        t1diagno.c \
        t1drivbd.c \
        t1driver.c \
        t1elemld.c \
        t1getprs.c \
        t1init.c \
        t1load.c \
        t1mopup.c \
        t1nmatch.c \
        t1set26.c \
        t1slotld.c \
        t1sw11.c \
        t1sw12.c \
        t1sw13.c \
        t1sw14.c \
        t1sw15.c \
        t1sw16.c \
        t1sw18.c \
        t1sw21.c \
        t1sw23.c \
        t1sw24.c \
        t1sw25.c \
        t1sw26.c \
        t1sw29.c \
        t1sw30.c \
        t1sw31.c \
        t1sw33.c \
        t1sw34.c \
        t1sw36.c \
        t1sw37.c \
        t1sw38.c \
        t1sw39.c \
        t1sw42.c \
        t1sw43.c \
        t1sw44.c \
        t1sw46.c \
        t1sw48.c \
        t1sw68.c \
        t1tratab.c \
        t1vtrbrn.c \
        t1vtrpro.c \
        tran_io.cpp \
	project.h \
	projexts.h
