# -*- makefile -*-

AM_CPPFLAGS =-I$(top_srcdir)/logos_include_res_pt 

noinst_LTLIBRARIES = liblgs_parsetran2.la

liblgs_parsetran2_la_SOURCES =  projextd.c \
 t2diagno.c \
 t2drivbd.c \
 t2driver.c \
 t2elemld.c \
 t2init.c \
 t2mopup.c \
 t2nmatch.c \
 t2vtrpro.c \
 tran_io.cpp\
 project.h \
 projexts.h

