# -*- makefile -*-

AM_CPPFLAGS =-I$(top_srcdir)/logos_include_res_pt 

noinst_LTLIBRARIES = liblgs_parsetran3.la

liblgs_parsetran3_la_SOURCES =  projextd.c \
 t3diagno.c \
 t3drivbd.c \
 t3driver.c \
 t3elemld.c \
 t3init.c \
 t3mopup.c \
 t3nmatch.c \
 t3sw36.c \
 t3sw38.c \
 t3vtrpro.c \
 tran_io.cpp \
 project.h \
 projexts.h

