# -*- makefile -*-

AM_CPPFLAGS =-I$(top_srcdir)/logos_include_res_pt 

noinst_LTLIBRARIES = liblgs_parsetran4.la

liblgs_parsetran4_la_SOURCES =  projextd.c \
 prwrt2tr.c \
 t4clrtrn.c \
 t4diagno.c \
 t4drivbd.c \
 t4driver.c \
 t4elemld.c \
 t4init.c \
 t4mopup.c \
 t4nmatch.c \
 t4sw25.c \
 t4sw28.c \
 t4sw36.c \
 t4sw38.c \
 t4sw44.c \
 t4sw46.c \
 t4sw48.c \
 t4vtrpro.c \
 tran_io.cpp \
 project.h \
 projexts.h

