# -*- makefile -*-

lib_LTLIBRARIES = liblgs_tran_rule_io.la

liblgs_tran_rule_io_la_LIBADD = \
 $(top_builddir)/logos_libs/GrammarRules/libgrammarrules.la

liblgs_tran_rule_io_la_SOURCES =  lgs_tran_rule_io.cpp \
	res_form.cpp \
	res_rule_io.cpp \
	res_stat_file.cpp \
	tran_rule_io.cpp \
	util.cpp \
	util_io.cpp \
	res_rule_io.h \
	res_rule_stat.h \
	resource.h \
	tran_rule_io.h \
	util.h \
	util_io.h

# _fix_me_
#     lgs_tran_rule_io.res misses. What is it and how can we use it??
#     See .rc file !!!!